# webdriver-extended

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
webdriver_extended/: __init__.py  api.py
webdriver_extended/chrome/: webdriver.py  webelement.py
