[tool.poetry]
name = "webdriver-extended"
version = "0.0.0"
description = "WebDriver with more stuff"
authors = ["Zeke Marffy <zmarffy@me.com>"]
readme = "README.md"
packages = [{ include = "webdriver_extended" }]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
selenium = ">=4.0.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pre-commit = "^2.21.0"
isort = "^5.11.4"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
clean = "rm -rf .pytest_cache dist ./**/__pycache__ test-report.xml"

[tool.poetry-dynamic-versioning]
enable = true
metadata = true
tagged-metadata = true
dirty = true
format-jinja = "{% if distance == 0 %}{{ base }}{% else %}{{ base }}+{{ distance }}.{{ commit }}{% endif %}"
