[tool.poetry]
name = "webdriver-extended"
version = "0.0.0"
description = "WebDriver with more stuff"
authors = ["Zeke Marffy <zmarffy@me.com>"]
readme = "README.md"
packages = [{ include = "webdriver_extended" }]

[tool.poetry.dependencies]
python = "^3.8.1"
poetry = "^1.4.0"
selenium = ">=4.0.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.black]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

[tool.poe.tasks]
clean = "rm -rf .pytest_cache dist ./**/__pycache__ test-report.xml"

[tool.poetry-dynamic-versioning]
enable = true
metadata = true
tagged-metadata = true
dirty = true
format-jinja = "{% if distance == 0 %}{{ base }}{% else %}{{ base }}+{{ distance }}.{{ commit }}{% endif %}"
